--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,6 @@
 (executables
- (public_names day1 day2 day3)
- (names day1 day2 day3))
+ (public_names day1 day2 day3 day4)
+ (names day1 day2 day3 day4))
 
 (env
   (dev
