--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,7 @@
 (executables
- (public_names day1 day2 day3 day4)
- (names day1 day2 day3 day4))
+ (preprocess (pps ppx_deriving.show ppx_deriving.ord))
+ (public_names day1 day2 day3 day4 day5 day6 day7)
+ (names day1 day2 day3 day4 day5 day6 day7))
 
 (env
   (dev
